--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/react-dom": "^0.14.23",
     "@types/react-router-dom": "^4.0.1",
     "classnames": "^2.2.5",
+    "firebase": "^3.7.5",
+    "firebaseui": "^1.0.1",
     "immutable": "^3.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
